# axum_htmx_csrf_demo

./: Cargo.toml
src/: handlers.rs  main.rs  render.rs
src/auth/: auth.rs
src/models/: authenticity_token.rs  counter.rs  mod.rs  request_counter.rs  user.rs
