[package]
name = "axum_htmx_csrf_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum_csrf = {version= "0.9.0", features = ["layer"]}
http-body-util = "0.1.0"
maud = "0.25.0"
serde = "1.0.193"
serde_urlencoded = "0.7.1"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-sessions = "0.7.0"
